[package]
edition = "2021"
name = "xed25519"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand_core = "0.6.3"
x25519-dalek = { version = "2.0.0-pre.1" }
curve25519-dalek = { version = "4.0.0-pre.2" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.2.0", default-features = false, features = ["napi4"] }
napi-derive = "2.2.0"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
